--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Michał Kupiecki - Front-End Developer</title>
     <link rel="stylesheet" type="text/css" href="css/style.prefixed.css">
 </head>
-<body></body>
+<body>
+    <p class="medium">Zawartość Paragrafu. Ó ó Ś ś Ć ć ą Ą</p>
+    <p class="book">Zawartość Paragrafu. Ó ó Ś ś Ć ć ą Ą</p>
+    <p class="roman">Zawartość Paragrafu. Ó ó Ś ś Ć ć ą Ą</p>
+</body>
 
 </html>
