add navbar, add logo to nav

--- a/index.html
+++ b/index.html
@@ -7,8 +7,22 @@
     <title>Michał Kupiecki - Front-End Developer</title>
     <link rel="stylesheet" type="text/css" href="css/style.prefixed.css">
 </head>
+
 <body>
-    
+    <header>
+        <div class="navbar-container">
+            <div class="nav-elem"></div>
+            <div class="logo-container"><img src="images/logo2.png"></div>
+            <nav>
+                <ul>
+                    <li><a href="#">O mnie</a></li>
+                    <li><a href="#">Technologie</a></li>
+                    <li><a href="#">Projekty</a></li>
+                    <li><a href="#">Kontakt</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 </body>
 
 </html>
