add icons to project sect

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </nav>
         </div>
     </header>
-    <button id="btnUp-js"><i class="fas fa-angle-up"></i></button>
+    <button id="btnCircleUp-js"><i class="fas fa-chevron-circle-up"></i></button> 
     <section class="sect-about-me">
         <div class="container">
             <div class="title-about-me">O mnie</div>
@@ -136,13 +136,15 @@
                             <div class="photo-cell">
                                 <div class="area-photo-1">
                                     <div class="photo-layer"></div>
+                                    <a href="#"><i class=" layer-icon fas fa-code"></i></a>
+                                    <a href="#"><i class=" layer-icon fas fa-search"></i></a>
                                 </div>
                             </div>
                         </div>
                         <div class="arrow"></div>
                         <h3 class="header-of-cell-title">
-                            <i class="fas fa-angle-right"></i>Zakodowany szablon</h3>
-                        <p>
+                            <i class="right-arrow fas fa-angle-right"></i>Zakodowany szablon</h3>
+                        <p class="cell-paragraph">
                             Prezentacja graficznego szablonu zakodowanego w HTML.
                         </p>
                         <h5 class="header-used-technologies">Wykorzystane technologie</h5>
@@ -177,13 +179,15 @@
                             <div class="photo-cell">
                                 <div class="area-photo-2">
                                     <div class="photo-layer"></div>
+                                    <a href="#"><i class=" layer-icon fas fa-code"></i></a>
+                                    <a href="#"><i class=" layer-icon fas fa-search"></i></a>
                                 </div>
                             </div>
                         </div>
                         <div class="arrow"></div>
                         <h3 class="header-of-cell-title">
-                            <i class="fas fa-angle-right"></i>Zakodowany szablon</h3>
-                        <p>
+                            <i class="right-arrow fas fa-angle-right"></i>Zakodowany szablon</h3>
+                        <p class="cell-paragraph">
                             Prezentacja graficznego szablonu zakodowanego w HTML.
                         </p>
                         <h5 class="header-used-technologies">Wykorzystane technologie</h5>
@@ -216,13 +220,15 @@
                             <div class="photo-cell">
                                 <div class="area-photo-3">
                                     <div class="photo-layer"></div>
+                                    <a href="#"><i class=" layer-icon fas fa-code"></i></a>
+                                    <a href="#"><i class=" layer-icon fas fa-search"></i></a>
                                 </div>
                             </div>
                         </div>
                         <div class="arrow"></div>
                         <h3 class="header-of-cell-title">
-                            <i class="fas fa-angle-right"></i>Zakodowany szablon</h3>
-                        <p>
+                            <i class="right-arrow fas fa-angle-right"></i>Zakodowany szablon</h3>
+                        <p class="cell-paragraph">
                             Prezentacja graficznego szablonu zakodowanego w HTML.
                         </p>
                         <h5 class="header-used-technologies">Wykorzystane technologie</h5>
@@ -255,13 +261,15 @@
                             <div class="photo-cell">
                                 <div class="area-photo-4">
                                     <div class="photo-layer"></div>
+                                    <a href="#"><i class=" layer-icon fas fa-code"></i></a>
+                                    <a href="#"><i class=" layer-icon fas fa-search"></i></a>
                                 </div>
                             </div>
                         </div>
                         <div class="arrow"></div>
                         <h3 class="header-of-cell-title">
-                            <i class="fas fa-angle-right"></i>Humorystyczny projekt</h3>
-                        <p>
+                            <i class="right-arrow fas fa-angle-right"></i>Humorystyczny projekt</h3>
+                        <p class="cell-paragraph">
                             Prezentacja możliwości popularnego frameworka - Bootstrapa.
                         </p>
                         <h5 class="header-used-technologies">Wykorzystane technologie</h5>
@@ -295,13 +303,15 @@
                             <div class="photo-cell">
                                 <div class="area-photo-5">
                                     <div class="photo-layer"></div>
+                                    <a href="#"><i class=" layer-icon fas fa-code"></i></a>
+                                    <a href="#"><i class=" layer-icon fas fa-search"></i></a>
                                 </div>
                             </div>
                         </div>
                         <div class="arrow"></div>
                         <h3 class="header-of-cell-title">
-                            <i class="fas fa-angle-right"></i>Gra Kamień-Papier-Nożyce</h3>
-                        <p>
+                            <i class="right-arrow fas fa-angle-right"></i>Gra Kamień-Papier-Nożyce</h3>
+                        <p class="cell-paragraph">
                             Prosta gra napisana z wykorzystaniem Java Script.
                         </p>
                         <h5 class="header-used-technologies">Wykorzystane technologie</h5>
@@ -335,13 +345,15 @@
                             <div class="photo-cell">
                                 <div class="area-photo-6">
                                     <div class="photo-layer"></div>
+                                    <a href="#"><i class=" layer-icon fas fa-code"></i></a>
+                                    <a href="#"><i class=" layer-icon fas fa-search"></i></a>
                                 </div>
                             </div>
                         </div>
                         <div class="arrow"></div>
                         <h3 class="header-of-cell-title">
-                            <i class="fas fa-angle-right"></i>Generator rzutów kośćmi</h3>
-                        <p>
+                            <i class="right-arrow fas fa-angle-right"></i>Generator rzutów kośćmi</h3>
+                        <p class="cell-paragraph">
                             Generator symulujący rzuty wieloma rodzajami kości. Przydatne w grach losowych.
                         </p>
                         <h5 class="header-used-technologies">Wykorzystane technologie</h5>
@@ -375,13 +387,15 @@
                             <div class="photo-cell">
                                 <div class="area-photo-7">
                                     <div class="photo-layer"></div>
+                                    <a href="#"><i class=" layer-icon fas fa-code"></i></a>
+                                    <a href="#"><i class=" layer-icon fas fa-search"></i></a>
                                 </div>
                             </div>
                         </div>
                         <div class="arrow"></div>
                         <h3 class="header-of-cell-title">
-                            <i class="fas fa-angle-right"></i>Gra szubienica</h3>
-                        <p>
+                            <i class="right-arrow fas fa-angle-right"></i>Gra szubienica</h3>
+                        <p class="cell-paragraph">
                             Gra polegająca na odgadnięciu słowa. Bazująca na Java Script.
                         </p>
                         <h5 class="header-used-technologies">Wykorzystane technologie</h5>
@@ -414,13 +428,15 @@
                             <div class="photo-cell">
                                 <div class="area-photo-8">
                                     <div class="photo-layer"></div>
+                                    <a href="#"><i class=" layer-icon fas fa-code"></i></a>
+                                    <a href="#"><i class=" layer-icon fas fa-search"></i></a>
                                 </div>
                             </div>
                         </div>
                         <div class="arrow"></div>
                         <h3 class="header-of-cell-title">
-                            <i class="fas fa-angle-right"></i>Strona Portfolio</h3>
-                        <p>
+                            <i class="right-arrow fas fa-angle-right"></i>Strona Portfolio</h3>
+                        <p class="cell-paragraph">
                             Strona którą przeglądasz.
                         </p>
                         <h5 class="header-used-technologies">Wykorzystane technologie</h5>
