add contact data to footer

--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
         <div class="footer-layer"></div>
         <div class="container">
             <div class="title-footer">Kontakt</div>
-            
+            <div class="flex-area">
                 <div class="footer-form">
                     <form method="POST" action="https://formspree.io/michal481216@gmail.com">
                         <input class="form-elem form-cell" type="email" name="email" placeholder="Adres e-mail">
@@ -519,12 +519,24 @@
                         <input class="form-btn" type="submit" name="button" value="Wyślij">
                     </form>
                 </div>
-                <div class="contact-data">
-                    <a href="#"><i class="contact-icon fab fa-github"></i></a>
-                    <a href="#"><i class="contact-icon fab fa-linkedin-in"></i></a>
-                    <a href="#"><i class="contact-icon far fa-envelope"></i></a>
+                <div class="data-container">
+                    <div class="contact-data">
+                        <div class="my-name">Michał Kupiecki</div>
+                        <div class="telephone-number">tel: 695 988 477</div>
+                        <div class="icon-container">
+                            <a class="icon-link" href="#">
+                                <i class="contact-icon fab fa-github"></i>
+                            </a>
+                            <a class="icon-link" href="#">
+                                <i class="contact-icon fab fa-linkedin-in"></i>
+                            </a>
+                            <a class="icon-link" href="#">
+                                <i class="contact-icon far fa-envelope"></i>
+                            </a>
+                        </div>
+                    </div>
                 </div>
-            
+            </div>
         </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
