add responsive navbar

--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
 
         <div class="responsive-navbar">
             <div class="logo-container">
-                <img class="responsive-navbar-logo" src="images/logo5.png">
+                <img class="responsive-navbar-logo" src="images/rwd_logo.png"> 
             </div>
             <div class="hamburger-container">
                 <button class="hamburger">
+                    <i class="hamburger-icon fas fa-bars"></i>
+                </button>
+                <button class="hamburger-close">
                     <i class="hamburger-icon fas fa-bars"></i>
                 </button>
             </div>
@@ -45,21 +48,21 @@
             <div class="nav-elem"></div>
             <div class="logo-container">
                 <a href="https://mikelinsky.github.io/Portfolio/"></a>
-                <img class="big-logo" src="images/logo5.png">
+                <img class="big-logo" src="images/logo.png">
                 <img class="small-logo" src="images/short_logo.png">
             </div>
             <nav>
                 <ul>
-                    <li>
+                    <li class="hamburger-li">
                         <a href="#about-me">O mnie</a>
                     </li>
-                    <li>
+                    <li class="hamburger-li">
                         <a href="#technologies">Technologie</a>
                     </li>
-                    <li>
+                    <li class="hamburger-li">
                         <a href="#projects">Projekty</a>
                     </li>
-                    <li>
+                    <li class="hamburger-li">
                         <a href="#contact">Kontakt</a>
                     </li>
                 </ul>
