small media tech-sect done

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </div>
         <div class="technologies-background-area">
             <div class="technologies-layer"></div>
-            <div class="container">
+            <div class="container media-padding">
 
                 <div class="row">
                     <div class="tech-html5">
