--- a/index.html
+++ b/index.html
@@ -161,6 +161,89 @@
             <div class="title-projects" id="projects">Projekty</div>
             <h3 class="header-of-projects">Moje projekty</h3>
         </div>
+        
+        <div class="resp-project-container container">
+            <div class="resp-project-layer"></div>
+            <div class="resp-project-min">
+                <div class="resp-photo-cell">
+                    <div class="area-photo-1">
+                        <div class="photo-layer"></div>
+                        <a target="_blank" href="https://github.com/Mikelinsky/PSDtoHTML-Picture_Perfect">
+                            <i class=" layer-icon fas fa-code"></i>
+                        </a>
+                        <a target="_blank" href="https://mikelinsky.github.io/PSDtoHTML-Picture_Perfect/">
+                            <i class=" layer-icon fas fa-search"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="resp-project-min">
+                <div class="resp-photo-cell">
+                    <div class="area-photo-2">
+                        <div class="photo-layer"></div>
+                        <a target="_blank" href="https://github.com/Mikelinsky/PSDtoHTML-Picture_Perfect">
+                            <i class=" layer-icon fas fa-code"></i>
+                        </a>
+                        <a target="_blank" href="https://mikelinsky.github.io/PSDtoHTML-Picture_Perfect/">
+                            <i class=" layer-icon fas fa-search"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="resp-project-min">
+                <div class="resp-photo-cell">
+                    <div class="area-photo-3">
+                        <div class="photo-layer"></div>
+                        <a target="_blank" href="https://github.com/Mikelinsky/PSDtoHTML-Picture_Perfect">
+                            <i class=" layer-icon fas fa-code"></i>
+                        </a>
+                        <a target="_blank" href="https://mikelinsky.github.io/PSDtoHTML-Picture_Perfect/">
+                            <i class=" layer-icon fas fa-search"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="resp-project-min">
+                <div class="resp-photo-cell">
+                    <div class="area-photo-4">
+                        <div class="photo-layer"></div>
+                        <a target="_blank" href="https://github.com/Mikelinsky/PSDtoHTML-Picture_Perfect">
+                            <i class=" layer-icon fas fa-code"></i>
+                        </a>
+                        <a target="_blank" href="https://mikelinsky.github.io/PSDtoHTML-Picture_Perfect/">
+                            <i class=" layer-icon fas fa-search"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="resp-project-min">
+                <div class="resp-photo-cell">
+                    <div class="area-photo-5">
+                        <div class="photo-layer"></div>
+                        <a target="_blank" href="https://github.com/Mikelinsky/PSDtoHTML-Picture_Perfect">
+                            <i class=" layer-icon fas fa-code"></i>
+                        </a>
+                        <a target="_blank" href="https://mikelinsky.github.io/PSDtoHTML-Picture_Perfect/">
+                            <i class=" layer-icon fas fa-search"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="resp-project-min">
+                <div class="resp-photo-cell">
+                    <div class="area-photo-6">
+                        <div class="photo-layer"></div>
+                        <a target="_blank" href="https://github.com/Mikelinsky/PSDtoHTML-Picture_Perfect">
+                            <i class=" layer-icon fas fa-code"></i>
+                        </a>
+                        <a target="_blank" href="https://mikelinsky.github.io/PSDtoHTML-Picture_Perfect/">
+                            <i class=" layer-icon fas fa-search"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="project-container">
             <div class="left-side">
                 <div class="list-left-side">
