add extreme small breakpoint

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
 
         <div class="responsive-navbar">
-            <div class="logo-container">
+            <div class="responsive-logo-container">
                 <img class="responsive-navbar-logo" src="images/rwd_logo.png"> 
             </div>
             <div class="hamburger-container">
@@ -167,12 +167,12 @@
             <div class="resp-project-min">
                 <div class="resp-photo-cell">
                     <div class="area-photo-1">
-                        <div class="photo-layer"></div>
+                        <div class="resp-photo-layer"></div>
                         <a target="_blank" href="https://github.com/Mikelinsky/PSDtoHTML-Picture_Perfect">
-                            <i class=" layer-icon fas fa-code"></i>
+                            <i class=" resp-layer-icon fas fa-code"></i>
                         </a>
                         <a target="_blank" href="https://mikelinsky.github.io/PSDtoHTML-Picture_Perfect/">
-                            <i class=" layer-icon fas fa-search"></i>
+                            <i class=" resp-layer-icon fas fa-search"></i>
                         </a>
                     </div>
                 </div>
@@ -180,12 +180,12 @@
             <div class="resp-project-min">
                 <div class="resp-photo-cell">
                     <div class="area-photo-2">
-                        <div class="photo-layer"></div>
+                        <div class="resp-photo-layer"></div>
                         <a target="_blank" href="https://github.com/Mikelinsky/PSDtoHTML-Picture_Perfect">
-                            <i class=" layer-icon fas fa-code"></i>
+                            <i class=" resp-layer-icon fas fa-code"></i>
                         </a>
                         <a target="_blank" href="https://mikelinsky.github.io/PSDtoHTML-Picture_Perfect/">
-                            <i class=" layer-icon fas fa-search"></i>
+                            <i class=" resp-layer-icon fas fa-search"></i>
                         </a>
                     </div>
                 </div>
@@ -193,12 +193,12 @@
             <div class="resp-project-min">
                 <div class="resp-photo-cell">
                     <div class="area-photo-3">
-                        <div class="photo-layer"></div>
+                        <div class="resp-photo-layer"></div>
                         <a target="_blank" href="https://github.com/Mikelinsky/PSDtoHTML-Picture_Perfect">
-                            <i class=" layer-icon fas fa-code"></i>
+                            <i class=" resp-layer-icon fas fa-code"></i>
                         </a>
                         <a target="_blank" href="https://mikelinsky.github.io/PSDtoHTML-Picture_Perfect/">
-                            <i class=" layer-icon fas fa-search"></i>
+                            <i class=" resp-layer-icon fas fa-search"></i>
                         </a>
                     </div>
                 </div>
@@ -206,12 +206,12 @@
             <div class="resp-project-min">
                 <div class="resp-photo-cell">
                     <div class="area-photo-4">
-                        <div class="photo-layer"></div>
+                        <div class="resp-photo-layer"></div>
                         <a target="_blank" href="https://github.com/Mikelinsky/PSDtoHTML-Picture_Perfect">
-                            <i class=" layer-icon fas fa-code"></i>
+                            <i class=" resp-layer-icon fas fa-code"></i>
                         </a>
                         <a target="_blank" href="https://mikelinsky.github.io/PSDtoHTML-Picture_Perfect/">
-                            <i class=" layer-icon fas fa-search"></i>
+                            <i class=" resp-layer-icon fas fa-search"></i>
                         </a>
                     </div>
                 </div>
@@ -219,12 +219,12 @@
             <div class="resp-project-min">
                 <div class="resp-photo-cell">
                     <div class="area-photo-5">
-                        <div class="photo-layer"></div>
+                        <div class="resp-photo-layer"></div>
                         <a target="_blank" href="https://github.com/Mikelinsky/PSDtoHTML-Picture_Perfect">
-                            <i class=" layer-icon fas fa-code"></i>
+                            <i class=" resp-layer-icon fas fa-code"></i>
                         </a>
                         <a target="_blank" href="https://mikelinsky.github.io/PSDtoHTML-Picture_Perfect/">
-                            <i class=" layer-icon fas fa-search"></i>
+                            <i class=" resp-layer-icon fas fa-search"></i>
                         </a>
                     </div>
                 </div>
@@ -232,12 +232,12 @@
             <div class="resp-project-min">
                 <div class="resp-photo-cell">
                     <div class="area-photo-6">
-                        <div class="photo-layer"></div>
+                        <div class="resp-photo-layer"></div>
                         <a target="_blank" href="https://github.com/Mikelinsky/PSDtoHTML-Picture_Perfect">
-                            <i class=" layer-icon fas fa-code"></i>
+                            <i class=" resp-layer-icon fas fa-code"></i>
                         </a>
                         <a target="_blank" href="https://mikelinsky.github.io/PSDtoHTML-Picture_Perfect/">
-                            <i class=" layer-icon fas fa-search"></i>
+                            <i class=" resp-layer-icon fas fa-search"></i>
                         </a>
                     </div>
                 </div>
