centering text media queries

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <div class="responsive-navbar">
             <div class="responsive-logo-container">
-                <img class="responsive-navbar-logo" src="images/rwd_logo.png"> 
+                <a href="https://mikelinsky.github.io/Portfolio/"><img class="responsive-navbar-logo" src="images/rwd_logo.png"></a>
             </div>
             <div class="hamburger-container">
                 <button class="hamburger">
@@ -76,11 +76,11 @@
         <div class="container">
             <div class="title-about-me" id="about-me">O mnie</div>
             <h3 class="header-of-about-me">Kilka słów</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora sint itaque, exercitationem nemo repellendus
+            <p class="paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora sint itaque, exercitationem nemo repellendus
                 eligendi. Incidunt neque explicabo ea facilis qui mollitia, est nemo magnam nostrum maxime quia blanditiis
                 maiores!
             </p>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora laborum officia nihil libero, maxime architecto
+            <p class="paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora laborum officia nihil libero, maxime architecto
                 enim cupiditate quod possimus, tempore ipsum nesciunt vel modi at. Quibusdam fugiat rerum corrupti quisquam.</p>
         </div>
     </section>
@@ -169,10 +169,10 @@
                     <div class="area-photo-1">
                         <div class="resp-photo-layer"></div>
                         <a target="_blank" href="https://github.com/Mikelinsky/PSDtoHTML-Picture_Perfect">
-                            <i class=" resp-layer-icon fas fa-code"></i>
+                            <i class="resp-layer-icon fas fa-code"></i>
                         </a>
                         <a target="_blank" href="https://mikelinsky.github.io/PSDtoHTML-Picture_Perfect/">
-                            <i class=" resp-layer-icon fas fa-search"></i>
+                            <i class="resp-layer-icon fas fa-search"></i>
                         </a>
                     </div>
                 </div>
@@ -695,6 +695,7 @@
                     </div>
                 </div>
             </div>
+            <div class="copyrights">Michał Kupiecki (C) 2018</div>
         </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
