add alt to img, add lang pl to html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pl">
 
 <head>
     <meta charset="UTF-8">
@@ -17,7 +17,7 @@
 
         <div class="responsive-navbar">
             <div class="responsive-logo-container">
-                <a href="https://mikelinsky.github.io/Portfolio/"><img class="responsive-navbar-logo" src="images/rwd_logo.png"></a>
+                <a href="https://mikelinsky.github.io/Portfolio/"><img class="responsive-navbar-logo" src="images/rwd_logo.png" alt="logo"></a>
             </div>
             <div class="hamburger-container">
                 <button class="hamburger">
@@ -49,8 +49,8 @@
             <div class="nav-elem"></div>
             <div class="logo-container">
                 <a href="https://mikelinsky.github.io/Portfolio/"></a>
-                <img class="big-logo" src="images/logo.png">
-                <img class="small-logo" src="images/short_logo.png">
+                <img class="big-logo" src="images/logo.png" alt="logo">
+                <img class="small-logo" src="images/short_logo.png" alt="medium logo">
             </div>
             <nav>
                 <ul>
