add about-me content

--- a/index.html
+++ b/index.html
@@ -77,12 +77,11 @@
         <div class="container">
             <div class="title-about-me" id="about-me">O mnie</div>
             <h3 class="header-of-about-me">Kilka słów</h3>
-            <p class="paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora sint itaque, exercitationem nemo repellendus
-                eligendi. Incidunt neque explicabo ea facilis qui mollitia, est nemo magnam nostrum maxime quia blanditiis
-                maiores!
+            <p class="paragraph">
+                <img class="photo-of-author" src="http://via.placeholder.com/350x250" alt="photo of author">
+                Nazywam się Michał Kupiecki i jestem początkującym programistą. <br> Lubię pisać czytelny kod zgodny z najlepszymi praktykami. Staram się możliwie precyzyjnie <br> i dokładnie wykonywac powieżone projekty. Uważam, że ważne jest aby strony były czytelne na różnych urządzeniach i przeglądarkach. Cenię sobie dobry design w którym nic nie jest pozostawione przypadkowi.
             </p>
-            <p class="paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora laborum officia nihil libero, maxime architecto
-                enim cupiditate quod possimus, tempore ipsum nesciunt vel modi at. Quibusdam fugiat rerum corrupti quisquam.</p>
+
         </div>
     </section>
     <section class="sect-technologies">
