add margin bottom to authorphoto

--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
             <div class="hamburger-menu">
                 <ul class="hamburger-list">
                     <li>
-                        <a href="#about-me">O mnie</a>
+                        <a class="hamburger-menu-link about-me-js" href="#about-me">O mnie</a>
                     </li>
                     <li>
-                        <a href="#technologies">Technologie</a>
+                        <a class="hamburger-menu-link tech-js" href="#technologies">Technologie</a>
                     </li>
                     <li>
-                        <a href="#projects">Projekty</a>
+                        <a class="hamburger-menu-link projects-js" href="#projects">Projekty</a>
                     </li>
                     <li>
-                        <a href="#contact">Kontakt</a>
+                        <a class="hamburger-menu-link contact-js" href="#contact">Kontakt</a>
                     </li>
                 </ul>
             </div>
@@ -54,17 +54,17 @@
             </div>
             <nav>
                 <ul>
-                    <li class="hamburger-li">
-                        <a href="#about-me">O mnie</a>
+                    <li class="navbar-li">
+                        <a id="about-me-js" href="#about-me">O mnie</a>
                     </li>
-                    <li class="hamburger-li">
-                        <a href="#technologies">Technologie</a>
+                    <li class="navbar-li">
+                        <a id="tech-js" href="#technologies">Technologie</a>
                     </li>
-                    <li class="hamburger-li">
-                        <a href="#projects">Projekty</a>
+                    <li class="navbar-li">
+                        <a id="projects-js" href="#projects">Projekty</a>
                     </li>
-                    <li class="hamburger-li">
-                        <a href="#contact">Kontakt</a>
+                    <li class="navbar-li">
+                        <a id="contact-js" href="#contact">Kontakt</a>
                     </li>
                 </ul>
             </nav>
@@ -79,7 +79,7 @@
             <h3 class="header-of-about-me">Kilka słów</h3>
             <p class="paragraph">
                 <img class="photo-of-author" src="http://via.placeholder.com/350x250" alt="photo of author">
-                Nazywam się Michał Kupiecki i jestem początkującym programistą. <br> Lubię pisać czytelny kod zgodny z najlepszymi praktykami. Staram się możliwie precyzyjnie <br> i dokładnie wykonywac powieżone projekty. Uważam, że ważne jest aby strony były czytelne na różnych urządzeniach i przeglądarkach. Cenię sobie dobry design w którym nic nie jest pozostawione przypadkowi.
+                Nazywam się Michał Kupiecki i jestem początkującym programistą. Lubię pisać czytelny kod zgodny z najlepszymi praktykami. Staram się możliwie precyzyjnie i dokładnie wykonywac powieżone projekty. Uważam, że ważne jest aby strony były czytelne na różnych urządzeniach i przeglądarkach. Cenię sobie dobry design w którym nic nie jest pozostawione przypadkowi.
             </p>
 
         </div>
