close menu when select

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <section class="sect-technologies">
         <div class="container">
             <div class="title-technologies" id="technologies">Technologie</div>
-            <h3 class="header-of-technologies">Technologie których używam</h3>
+            <h3 class="header-of-technologies">Używane technologie</h3>
         </div>
         <div class="technologies-background-area">
             <div class="technologies-layer"></div>
@@ -680,7 +680,7 @@
                 <div class="data-container">
                     <div class="contact-data">
                         <div class="my-name">Michał Kupiecki</div>
-                        <div class="telephone-number">tel: 695 988 477</div>
+                        <a class="telephone-number-link" href="tel:695988477"><div class="telephone-number">tel: 695 988 477</div></a>
                         <div class="icon-container">
                             <a class="icon-link" href="#">
                                 <i class="contact-icon fab fa-github"></i>
@@ -688,7 +688,7 @@
                             <a class="icon-link" href="#">
                                 <i class="contact-icon fab fa-linkedin-in"></i>
                             </a>
-                            <a class="icon-link" href="#">
+                            <a class="icon-link" href="mailto:michal481216@gmail.com">
                                 <i class="contact-icon far fa-envelope"></i>
                             </a>
                         </div>
