optimalization project background, add avatar

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="title-about-me" id="about-me">O mnie</div>
             <h3 class="header-of-about-me">Kilka słów</h3>
             <p class="paragraph">
-                <img class="photo-of-author" src="http://via.placeholder.com/350x250" alt="photo of author">
+                <img class="photo-of-author" src="images/awatar.png" alt="photo of author">
                 Nazywam się Michał Kupiecki i jestem początkującym programistą. Lubię pisać czytelny kod zgodny z najlepszymi praktykami. Staram się możliwie precyzyjnie i dokładnie wykonywac powieżone projekty. Uważam, że ważne jest aby strony były czytelne na różnych urządzeniach i przeglądarkach. Cenię sobie dobry design w którym nic nie jest pozostawione przypadkowi.
             </p>
 
@@ -682,13 +682,13 @@
                         <div class="my-name">Michał Kupiecki</div>
                         <a class="telephone-number-link" href="tel:695988477"><div class="telephone-number">tel: 695 988 477</div></a>
                         <div class="icon-container">
-                            <a class="icon-link" href="#">
+                            <a target="_blank" class="icon-link" href="https://github.com/Mikelinsky">
                                 <i class="contact-icon fab fa-github"></i>
                             </a>
-                            <a class="icon-link" href="#">
+                            <a target="_blank" class="icon-link" href="https://www.linkedin.com/in/micha%C5%82-kupiecki-1b8074167/">
                                 <i class="contact-icon fab fa-linkedin-in"></i>
                             </a>
-                            <a class="icon-link" href="mailto:michal481216@gmail.com">
+                            <a target="_blank" class="icon-link" href="mailto:michal481216@gmail.com">
                                 <i class="contact-icon far fa-envelope"></i>
                             </a>
                         </div>
