update project section

--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
                             <div class="photo-cell">
                                 <div class="area-photo-6">
                                     <div class="photo-layer"></div>
-                                    <a target="_blank" href="">
+                                    <a target="_blank" href="https://github.com/Mikelinsky/Game-Rock_Paper_Scissors">
                                         <i class=" layer-icon fas fa-code"></i>
                                     </a>
                                     <a target="_blank" href="https://mikelinsky.github.io/Game-Rock_Paper_Scissors/">
@@ -618,11 +618,8 @@
                             <div class="photo-cell">
                                 <div class="area-photo-8">
                                     <div class="photo-layer"></div>
-                                    <a href="#">
+                                    <a target="_blank" href="https://github.com/Mikelinsky/Portfolio">
                                         <i class=" layer-icon fas fa-code"></i>
-                                    </a>
-                                    <a href="#">
-                                        <i class=" layer-icon fas fa-search"></i>
                                     </a>
                                 </div>
                             </div>
