--- a/index.html
+++ b/index.html
@@ -536,11 +536,11 @@
                             <div class="photo-cell">
                                 <div class="area-photo-6">
                                     <div class="photo-layer"></div>
-                                    <a target="_blank" href="https://github.com/Mikelinsky/Game-Rock_Paper_Scissors">
+                                    <a target="_blank" href="https://github.com/Mikelinsky/Dice-Generator">
                                         <i class=" layer-icon fas fa-code"></i>
                                     </a>
-                                    <a target="_blank" href="https://mikelinsky.github.io/Game-Rock_Paper_Scissors/">
-                                        <i class=" layer-icon fas fa-search"></i>
+                                    <a target="_blank" href="https://mikelinsky.github.io/Dice-Generator/"> 
+                                        <i class=" layer-icon fas fa-search"></i> 
                                     </a>
                                 </div>
                             </div>
