add miniature and links

--- a/index.html
+++ b/index.html
@@ -242,6 +242,29 @@
                     </div>
                 </div>
             </div>
+            <div class="resp-project-min">
+                <div class="resp-photo-cell">
+                    <div class="area-photo-7">
+                        <div class="resp-photo-layer"></div>
+                        <a target="_blank" href="https://github.com/Mikelinsky/Gra-Szubienica"> 
+                            <i class=" resp-layer-icon fas fa-code"></i>
+                        </a>
+                        <a target="_blank" href="https://mikelinsky.github.io/Gra-Szubienica/">
+                            <i class=" resp-layer-icon fas fa-search"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="resp-project-min">
+                <div class="resp-photo-cell">
+                    <div class="area-photo-8">
+                        <div class="resp-photo-layer"></div>
+                        <a target="_blank" href="https://github.com/Mikelinsky/Portfolio"> 
+                            <i class=" resp-layer-icon fas fa-code"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="project-container">
